chore: solving bug overflow

--- a/src/layout/Layout.module.css
+++ b/src/layout/Layout.module.css
@@ -1,5 +1,5 @@
 .LayoutContainer {
-    width: 100vw;
+    width: 100%;
     height: inherit;
     display: flex;
     flex-direction: row;
@@ -12,7 +12,7 @@
 .MainContentContainer {
     flex: 1;
     overflow-y: auto;
-    padding: 10px 30px;
+    padding: 10px 20px 10px 0px;
 }
 
 .FullLayoutContainer {
